# graphrag-demo

./: .env.example  .gitignore  README.md  docker-compose.yml
app/: Dockerfile  config.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  timing.py
app/data/scotus/: 2018_air-and-liquid-systems-corp-v-devries.md  2018_apple-v-pepper.md  2018_azar-v-allina-health-services.md  2018_biestek-v-berryhill.md  2018_bnsf-railway-co-v-loos.md  2018_box-v-planned-parenthood-of-indiana-and-kentucky-inc.md  2018_bucklew-v-precythe.md  2018_carpenter-v-murphy.md  2018_city-of-escondido-v-emmons.md  2018_cochise-consultancy-inc-v-united-states-ex-rel-hunt.md  2018_culbertson-v-berryhill.md  2018_dawson-v-steager.md  2018_department-of-commerce-v-new-york.md  2018_emulex-corp-v-varjabedian.md  2018_flowers-v-mississippi.md  2018_food-marketing-institute-v-argus-leader-media.md  2018_fort-bend-county-texas-v-davis.md  2018_fourth-estate-public-benefit-corp-v-wall-streetcom.md  2018_franchise-tax-board-of-california-v-hyatt.md  2018_frank-v-gaos.md  2018_gamble-v-united-states.md  2018_garza-v-idaho.md  2018_gray-v-wilkie.md  2018_gundy-v-united-states.md  2018_helsinn-healthcare-sa-v-teva-pharmaceuticals-usa-inc.md  (+366 more)
app/embeddings/: __init__.py  local.py  openai_embed.py
app/llm/: __init__.py  claude_llm.py  ollama_llm.py  openai_llm.py
app/retrieval/: __init__.py  combined.py  graph.py  hybrid.py  production.py  vector.py
app/seed/: generate_data.py  scotus_data.py  scotus_templates.py  seed.py  templates.py
app/static/: app.js  index.html  style.css
(+14 files in other folders)
